--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head></head>
   <head>
+    <link rel="stylesheet" href="style.css" />
     <title>My Personal Website</title>
   </head>
   <body>
